[gd_scene load_steps=4 format=2]

[ext_resource path="res://scene/object/RoleChoosePanel.gd" type="Script" id=1]
[ext_resource path="res://font/font_siteName.tres" type="DynamicFont" id=2]
[ext_resource path="res://scene/object/RoleLevelPanel.tscn" type="PackedScene" id=3]

[node name="RoleChoosePanel" type="Panel"]
self_modulate = Color( 0.6, 0.32549, 0.32549, 0.207843 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0.423529, 0.831373, 0.0901961, 1 )
margin_left = 333.0
margin_top = 12.0
margin_right = 880.0
margin_bottom = 666.0

[node name="Label" type="Label" parent="Panel"]
margin_left = 178.345
margin_top = 20.6777
margin_right = 328.345
margin_bottom = 45.6777
custom_fonts/font = ExtResource( 2 )
text = "选择一位队友"

[node name="RoleViewPlace" type="HBoxContainer" parent="Panel"]
margin_left = 1.0
margin_top = 91.0
margin_right = 543.0
margin_bottom = 201.0
custom_constants/separation = 40
alignment = 1

[node name="RoleLevelPanel" parent="Panel" instance=ExtResource( 3 )]
margin_left = 120.253
margin_top = 219.111
margin_right = 427.253
margin_bottom = 536.111

[node name="confirmButton" type="Button" parent="Panel"]
margin_left = 224.287
margin_top = 565.172
margin_right = 317.287
margin_bottom = 609.172
custom_fonts/font = ExtResource( 2 )
text = "确定"

[node name="jumpButton" type="Button" parent="Panel"]
margin_left = 432.969
margin_top = 15.0115
margin_right = 525.969
margin_bottom = 59.0115
custom_fonts/font = ExtResource( 2 )
text = "跳过"

